Bug 91404 - Crash creating a document from the toolbar (not menu)
Summary: Crash creating a document from the toolbar (not menu)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, bisected, regression
: 91414 91446 91498 91507 91538 91547 91572 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-20 09:29 UTC by Matthew Francis
Modified: 2016-10-25 19:19 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Linux 5.0 master backtrace (4.80 KB, text/plain)
2015-05-20 09:30 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-05-20 09:29:14 UTC
On current master, creating a document using the dropdown on the toolbar (not the File menu) ends in a crash
Comment 1 Matthew Francis 2015-05-20 09:30:45 UTC
Created attachment 115743 [details]
Linux 5.0 master backtrace
Comment 2 Matthew Francis 2015-05-20 09:31:54 UTC
This seems to have begun at the below commit.
Adding Cc: to kendy@collabora.com; Could you possibly take a look at this one? Thanks

commit 9c9db85643866ea57757a532d232e05a88de5fb8
Author: Jan Holesovsky <kendy@collabora.com>
Date:   Tue May 19 16:35:45 2015 +0200

    rendercontext toolbar: Invalidate instead of direct paint.
    
    Change-Id: Ib4c11d3f1ec793e66cd47c1f7bb4f7d06820d58f
Comment 3 Tomaz Vajngerl 2015-05-20 11:10:16 UTC
I'll take that. It just needs some bound checking in InvalidateItem - looks like the item position can be invalid.
Comment 4 Commit Notification 2015-05-20 11:15:54 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5b0a647c4002d987e3c5c4e43ff0041c2a4d9e5

tdf#91404 check if the item position is valid

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Tomaz Vajngerl 2015-05-21 00:56:34 UTC
*** Bug 91414 has been marked as a duplicate of this bug. ***
Comment 6 Julien Nabet 2015-05-23 00:03:15 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
I suppose it's fixed now thanks to Tomaz's patch.

Matthew: don't hesitate to reopen this tracker if you can still reproduce this (with an updated bt if possible :-))
Comment 7 Jean-Baptiste Faure 2015-05-23 06:09:30 UTC
(In reply to Commit Notification from comment #4)
> Tomaž Vajngerl committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=e5b0a647c4002d987e3c5c4e43ff0041c2a4d9e5
> 
> tdf#91404 check if the item position is valid
> 
> It will be available in 5.0.0.

This patch is not included in 5.0 branch and this bug is not fixed for 5.0.0.beta1.

Please, consider to backport this commit.

Best regards. JBF
Comment 8 Jean-Baptiste Faure 2015-05-23 06:10:42 UTC
*** Bug 91498 has been marked as a duplicate of this bug. ***
Comment 9 Jean-Baptiste Faure 2015-05-23 06:13:34 UTC
*** Bug 91446 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2015-05-23 06:31:41 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7a40e1470431d8978d4ca96e7651af9b0609df3&h=libreoffice-5-0

tdf#91404 check if the item position is valid

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jean-Baptiste Faure 2015-05-23 07:29:55 UTC
(In reply to Commit Notification from comment #10)
> Tomaž Vajngerl committed a patch related to this issue.
> It has been pushed to "libreoffice-5-0":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=f7a40e1470431d8978d4ca96e7651af9b0609df3&h=libreoffice-5-0
> 
> tdf#91404 check if the item position is valid
> 
> It will be available in 5.0.0.0.beta2.

Thank you very much Tomaz! Build in progress. :-)

Best regards. JBF
Comment 12 Jean-Baptiste Faure 2015-05-23 07:46:01 UTC
Verified Fixed on Version: 5.0.0.0.beta1+
Build ID: f7a40e1470431d8978d4ca96e7651af9b0609df3
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)

Thank you very much.

Best regards. JBF
Comment 13 tommy27 2015-05-23 09:52:38 UTC
*** Bug 91507 has been marked as a duplicate of this bug. ***
Comment 14 raal 2015-05-23 19:52:07 UTC
*** Bug 91538 has been marked as a duplicate of this bug. ***
Comment 15 Michael 2015-05-23 20:30:27 UTC
*** Bug 91547 has been marked as a duplicate of this bug. ***
Comment 16 tommy27 2015-05-24 10:27:36 UTC
*** Bug 91572 has been marked as a duplicate of this bug. ***
Comment 17 Robinson Tryon (qubit) 2015-12-17 09:10:36 UTC Comment hidden (obsolete)