tdf#91404 check if the item position is valid

Change-Id: I963cf83d32bb976095274be913806de19bdf7a86